classDiagram
    class Card {
        <<abstract>>
        #int number
        #bool faceUp
        #CardType cardType
        +getNumber() int
        +setNumber(int)
        +isFaceUp() bool
        +setFaceUp(bool)
        +getCardType() CardType
        +getRevealMessage()* string
    }
    class StandardCard {
        +StandardCard(int number, bool faceUp)
    }
    class BonusCard {
        +BonusCard(bool faceUp)
    }
    class PenaltyCard {
        +PenaltyCard(bool faceUp)
    }
    Card <|-- StandardCard
    Card <|-- BonusCard
    Card <|-- PenaltyCard

    class Deck {
        -int removedCards
        +revealCard(row, col) CardEvent
        +evaluateFlippedCards() RevealedCardsEvent
        +revealLastCard() CardType
        +evaluateLastCard() CardType
        +revealLastPair()
        +getCardAt(index) Card
        +getDeckStatus() DeckStatus
    }
    Deck "1" o-- "16" Card : owns

    class Player {
        -string name
        -int score
        -int turnsNo
        +getScore() int
        +updateScore(int)
        +incrementTurn()
        +decrementTurn()
    }

    class Game {
        -GamePhase phase
        -TurnOutcome turnOutcome
        -int currentTurn
        -int nextTurn
        +onCardClicked(row, col) CardEvent
        +finalizeTurn() TurnOutcome
        +onBonusChoice(choice) TurnOutcome
        +onPenaltyChoice(choice) TurnOutcome
        +revealFinalCard() CardType
        +finalizeLastCard() CardType
        +revealFinalPair()
        +finalizeLastPair() TurnOutcome
        +getSnapshot() GameSnapshot
        +getPhase() GamePhase
        +getWinnerIndex() int
        -resolveRevealedPair() TurnOutcome
        -applyTurnOutcome(TurnOutcome)
        -checkDeckStatusAndAdvance()
    }
    Game "1" *-- "2" Player : owns
    Game "1" *-- "1" Deck : owns
    Game ..> GameSnapshot : builds on demand

    class GameSnapshot {
        +grid CardView
        +players PlayerView
        +currentPlayerIndex int
        +statusMessage string
    }
